--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "nodemon": "^3.1.11"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node Server/server.js",
+    "dev": "nodemon Server/server.js"
   },
   "keywords": [],
   "author": "",
