--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb+srv://wificampbell:abcd9903%2A%2A@soulinkcluster.w0pyvxe.mongodb.net/JournalingApp?retryWrites=true&w=majority
-MONGODB_DB=JournalingApp
+MONGO_URI = mongodb+srv://wificampbell:abcd9903%2A%2A@soulinkcluster.w0pyvxe.mongodb.net/JournalingApp?retryWrites=true&w=majority
+MONGODB_DB = JournalingApp
+SESSION_SECRET = "lllooovvveee1233477"
+CLIENT_URL = https://soulink-hujn.onrender.com
+PORT = 10000
