--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://wificampbell:abcd9903%2A%2A@soulinkcluster.w0pyvxe.mongodb.net/JournalingApp?retryWrites=true&w=majority
+MONGO_URI = MONGO_URI=mongodb+srv://wificampbell:abcd9903%2A%2A@soulinkcluster.mongodb.net/JournalingApp?retryWrites=true&w=majority&ssl=true
 MONGODB_DB = JournalingApp
 SESSION_SECRET = "lllooovvveee1233477"
 CLIENT_URL = https://soulink-hujn.onrender.com
